2002-11-24  Duncan Mak  <duncan@ximian.com>

	* XmlImplementation.cs (HasFeature): Fixed a typo. Thanks for
	Fabricio Barros Cabral (fx) on #mono for spotting it. This is his
	first patch to Mono! ;-)

2002-11-19  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* XmlNode.cs:
	(AppendChild): readded refChild != null condition before throwing
	"cannot insert this node in this position" exception. There's probably
	a better solution. Fixes #34191.
	(RemoveAll): changed following Atsushi instructions.
	

2002-11-13  Duncan Mak  <duncan@ximian.com>

	* XmlElement.cs (IsEmpty): A temporary check-in to keep gtk-sharp
	compiling.

2002-11-14  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlDocument.cs : unified all constructors, added ConventionalParser,
		implemented CloneNode() and CreateEntityReference(),
	* XmlEntityReference.cs : set_Value, WriteContentTo, WriteTo
		set BaseURI to MonoTODO
	* XmlNode.cs : implemented PrependChild, modified ConstructDOM,
		bugfix InsertAfter (incorrect prepending) and InsertBefore
		(more than one DocumentElements hadn't caused errors)
	* XmlTextReader.cs : unified all constructors,
		added internal SetReaderContext(), SetReaderFragment()
		bugfix (syntax check of PUBLIC / getting internal subset)

2002-11-13  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	XmlAttribute.cs : set_InnerText, set_InnerXml, some check for set_Prefix
	XmlAttributeCollection.cs : (indexer) this[localName, namespaceURI]
	XmlCharacterData.cs : exchanged Data and Value
		(for processing events and inheritance)
	XmlDocumentFragment.cs : set_InnerXml
	XmlSignificantWhitespace.cs : set_Value
	XmlTextReader.cs : ReadAttributeValue

2002-11-04  Atsushi Enomoto <gigna@kit.hi-ho.ne.jp>

	XmlAttribute.cs: fixed missing internal 'OwnerElement''SetOwnerElement'

2002-11-03  Atsushi Enomoto <gigna@kit.hi-ho.ne.jp>

	* XmlAttributeCollection.cs : checks owner element.
		implemented CopyTo, InsertAfter, InsertBefore, Prepend,
		Remove, RemoveAt, SetNamedItem.